--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -1,1 +1,11 @@
 @import "~vue-snotify/styles/material";
+
+.form-wrapper {
+	width: 600px;
+	margin: 0 auto;
+}
+
+.input-fields {
+	display: flex;
+	margin-bottom: 18px;
+}
