--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -9,3 +9,13 @@
 	display: flex;
 	margin-bottom: 18px;
 }
+
+.hero.is-dark .tile-wrapper {
+	.title, .subtitle {
+		color: black;
+	}
+
+	li {
+		list-style: none;
+	}
+}
