--- a/src/assets/scss/tailwind.scss
+++ b/src/assets/scss/tailwind.scss
@@ -1,11 +1,12 @@
-.mb-30px {
-	margin-bottom: 30px;
-}
+// margin
+.ml-5px { margin-left: 5px; }
+.mb-30px { margin-bottom: 30px; }
 
-.ml-5px {
-	margin-left: 5px;
-}
+// padding
+.p-30px { padding: 30px; }
 
-.max-width-800px {
-	max-width: 800px;
-}
+// width
+.max-w-800px { max-width: 800px; }
+
+// typography
+.text-center { text-align: center !important; }
