--- a/src/assets/scss/tailwind.scss
+++ b/src/assets/scss/tailwind.scss
@@ -2,6 +2,7 @@
 .ml-5px { margin-left: 5px; }
 .ml-10px { margin-left: 10px; }
 .mb-30px { margin-bottom: 30px; }
+.mt-30px { margin-top: 30px !important; }
 
 // padding
 .p-30px { padding: 30px; }
